2015-01-21  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (get_logon_server): Constify domain parameter.
	* security.h (get_logon_server): Same in prototype.

2015-01-20  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (sockatmark): Export.
	* net.cc (sockatmark): New function.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2015-01-19  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver_ipc.h (ipc_retval): Add default constructor.
	(class thread): struct->class.  Add prototypes for new private methods
	dup_signal_arrived and close_signal_arrived.  Implement constructor and
	destructor.

2015-01-16  Marco Atzeri <marco.atzeri@gmail.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* gendef: Export _sigbe on 64 bit as well.
	* malloc_wrapper.cc (free): In malloc_printf, call caller_return_address
	instead of __builtin_return_address.
	(malloc): Ditto.
	(realloc): Ditto.
	(calloc): Ditto.
	* miscfuncs.cc (__caller_return_address): New function.
	* miscfuncs.h (caller_return_address): New macro calling
	__caller_return_address.
	(__caller_return_address): Add prototype.

2015-01-14  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (fetch_windows_home): Disable fetching from homeDrive or
	usri3_home_dir_drive.  Add comment.

2015-01-14  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (renv_arr): Drop variables not usually in a Windows
	environment and all variables being uppercase anyway.  But keep
	TMP and TEMP for paranoia.

2015-01-14  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (build_env): When merging the user's Windows environment,
	explicitely skip the variables needing conversion to avoid collisions.
	Extend comment to explain.

2015-01-13  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Drop code from
	2014-11-17, always prepending domain to NT SERVICE accounts when
	searching by name.  Fix test expression to allow fully qualified